# netsock

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: arguments.h  logger.h  network.h  protocol.h  recv.h  send.h
src/: arguments.c  isockcom.c  isockcom.h  logger.c  main.c  netcopy.c  netcopy.h  netsock.c  netsock.h  network.c  recv.c  send.c
src/arguments/: arguments.c  arguments.h
src/logger/: logger.h
src/network/: network.c  network.h
src/network/recv/: recv.c  recv.h
src/network/send/: send.c  send.h
src/protocol/: protocol.h
test/: e2e.sh  test.c  test.sh  test_arguments.cpp
test/util/: test_file.c  test_runner.c  test_runner.h  test_socket.c  test_socket.h
test/util/file/: test_file.c  test_file.h
test/util/runner/: test_runner.c  test_runner.h
test/util/socket/: test_socket.c  test_socket.h
